downgraded python environment...

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 **/__pycache__/
 practice-projects/data/sample-files
 practice-projects/data/training-files
+practice-projects/data/unzipped-data/NN
