Some updates for NN

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 **/venv/
 **/__pycache__/
-practice-projects/data/sample-files
-practice-projects/data/training-files
-practice-projects/data/unzipped-data/NN
+**/sample-files
+**/training-files
+**/NN/
+**/NuralNetwork
